force-app/main/default/objects/Victims_Served_Report__c/fields/On_Track_Fiscally__c.field-meta.xml
<CustomField>
    <fullName>On_Track_Fiscally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Track Fiscally</label>
    <type>Checkbox</type>
</CustomField>