force-app/main/default/objects/Victims_Served_Report__c/fields/Ongoing_Successes__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Successes__c</fullName>
    <label>Ongoing Successes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>