force-app/main/default/objects/Victims_Served_Report__c/fields/Other_Gender__c.field-meta.xml
<CustomField>
    <fullName>Other_Gender__c</fullName>
    <label>Other Gender</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>