force-app/main/default/objects/Victims_Served_Report__c/fields/Other_Genders__c.field-meta.xml
<CustomField>
    <fullName>Other_Genders__c</fullName>
    <label>Other Genders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>