force-app/main/default/objects/Victims_Served_Report__c/fields/Other_Special_Classification__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Classification__c</fullName>
    <label>Other Special Classification</label>
    <length>3</length>
    <type>Text</type>
</CustomField>