force-app/main/default/objects/Victims_Served_Report__c/fields/Other_Vehicular_Victimization__c.field-meta.xml
<CustomField>
    <fullName>Other_Vehicular_Victimization__c</fullName>
    <label>Other Vehicular Victimization</label>
    <length>3</length>
    <type>Text</type>
</CustomField>