force-app/main/default/objects/Victims_Served_Report__c/fields/Other_Victimization_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Victimization_Explanation__c</fullName>
    <label>Other Victimization Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>