force-app/main/default/objects/Victims_Served_Report__c/fields/Personal_Advocacy_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Personal_Advocacy_Services_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Advocacy Services Provided</label>
    <type>Checkbox</type>
</CustomField>