force-app/main/default/objects/Victims_Served_Report__c/fields/Preferred_Method_of_T_TA_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Method_of_T_TA_Delivery__c</fullName>
    <label>Preferred Method of T/TA Delivery</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>