force-app/main/default/objects/Victims_Served_Report__c/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian/Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black/African-American</fullName>
            </value>
            <value>
                <fullName>Hispanic/Latino</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian/Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White Non-Latino/Caucasian</fullName>
            </value>
            <value>
                <fullName>Multiple Races</fullName>
            </value>
            <value>
                <fullName>Not Reported</fullName>
            </value>
            <value>
                <fullName>Not Tracked</fullName>
                <isActive>false</isActive>
                <label>Not Tracked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>