force-app/main/default/objects/Victims_Served_Report__c/fields/Race_Ethnicity_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Race/Ethnicity Tracked</label>
    <type>Checkbox</type>
</CustomField>