force-app/main/default/objects/Victims_Served_Report__c/fields/Request_for_Services_Unmet__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Services_Unmet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Services Unmet</label>
    <type>Checkbox</type>
</CustomField>