force-app/main/default/objects/Victims_Served_Report__c/fields/Robbery__c.field-meta.xml
<CustomField>
    <fullName>Robbery__c</fullName>
    <label>Robbery</label>
    <length>3</length>
    <type>Text</type>
</CustomField>