force-app/main/default/objects/Victims_Served_Report__c/fields/Services_Not_Provided__c.field-meta.xml
<CustomField>
    <fullName>Services_Not_Provided__c</fullName>
    <label>Services Not Provided</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>