force-app/main/default/objects/Victims_Served_Report__c/fields/Shelter_Housing_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Housing_Services_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shelter/Housing Services Provided</label>
    <type>Checkbox</type>
</CustomField>