force-app/main/default/objects/Victims_Served_Report__c/fields/Some_Other_Race__c.field-meta.xml
<CustomField>
    <fullName>Some_Other_Race__c</fullName>
    <label>Some Other Race</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>