force-app/main/default/objects/Victims_Served_Report__c/fields/Special_Classification__c.field-meta.xml
<CustomField>
    <fullName>Special_Classification__c</fullName>
    <label>Special Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deaf/Hard-of-Hearing</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Immigrants/Refugees/Asylum Seekers</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>Veterans</fullName>
            </value>
            <value>
                <fullName
        >Victims with Disabilities: Cognitive/Physical/Mental</fullName>
                <label
        >Victims with Disabilities: Cognitive/Physical/Mental</label>
            </value>
            <value>
                <fullName>Victims with Limited English Proficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>