force-app/main/default/objects/Victims_Served_Report__c/fields/Stalking__c.field-meta.xml
<CustomField>
    <fullName>Stalking__c</fullName>
    <label>Stalking</label>
    <length>3</length>
    <type>Text</type>
</CustomField>