force-app/main/default/objects/Victims_Served_Report__c/fields/Survivors_of_Homicide_Victims__c.field-meta.xml
<CustomField>
    <fullName>Survivors_of_Homicide_Victims__c</fullName>
    <label>Survivors of Homicide Victims</label>
    <length>3</length>
    <type>Text</type>
</CustomField>