force-app/main/default/objects/Victims_Served_Report__c/fields/Teen_Dating_Victimization__c.field-meta.xml
<CustomField>
    <fullName>Teen_Dating_Victimization__c</fullName>
    <label>Teen Dating Victimization</label>
    <length>3</length>
    <type>Text</type>
</CustomField>