force-app/main/default/objects/Victims_Served_Report__c/fields/Terrorism__c.field-meta.xml
<CustomField>
    <fullName>Terrorism__c</fullName>
    <label>Terrorism</label>
    <length>3</length>
    <type>Text</type>
</CustomField>