force-app/main/default/objects/Victims_Served_Report__c/fields/Tracking_New_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Tracking_New_Individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking New Individuals</label>
    <type>Checkbox</type>
</CustomField>