force-app/main/default/objects/Victims_Served_Report__c/fields/Training_and_Technical_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Technical_Assistance__c</fullName>
    <label>Training and Technical Assistance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>