force-app/main/default/objects/Victims_Served_Report__c/fields/Type_of_Victimization__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Victimization__c</fullName>
    <label>Type of Victimization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >Adult Physical Assault (Includes Aggravated and Simple Assault)</fullName>
                <label
        >Adult Physical Assault (Includes Aggravated and Simple Assault)</label>
            </value>
            <value>
                <fullName>Adult Sexual Assault</fullName>
            </value>
            <value>
                <fullName
        >Adults Sexually Abused/Assaulted as Children</fullName>
                <label>Adults Sexually Abused/Assaulted as Children</label>
            </value>
            <value>
                <fullName>Arson</fullName>
            </value>
            <value>
                <fullName>Bullying (Verbal, Cyber, or Physical)</fullName>
            </value>
            <value>
                <fullName>Burglary</fullName>
            </value>
            <value>
                <fullName>Child Physical Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName>Child Pornography</fullName>
            </value>
            <value>
                <fullName>Child Sexual Abuse/Assault</fullName>
            </value>
            <value>
                <fullName>Domestic and/or Family Violence</fullName>
            </value>
            <value>
                <fullName>DUI/DWI Incidents</fullName>
            </value>
            <value>
                <fullName>Elder Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName
        >Hate Crime: Racial/Religious/Gender/Sexual Orientation/Other</fullName>
                <label
        >Hate Crime: Racial/Religious/Gender/Sexual Orientation/Other</label>
            </value>
            <value>
                <fullName>Human Trafficking: Labor</fullName>
            </value>
            <value>
                <fullName>Human Trafficking: Sex</fullName>
            </value>
            <value>
                <fullName>Identity Theft/Fraud/Financial Crime</fullName>
            </value>
            <value>
                <fullName>Kidnapping (Non-custodial)</fullName>
            </value>
            <value>
                <fullName>Kidnapping (Custodial)</fullName>
            </value>
            <value>
                <fullName>Mass Violence (Domestic/International)</fullName>
            </value>
            <value>
                <fullName
        >Other Vehicular Victimization (e.g., Hit and Run)</fullName>
                <label>Other Vehicular Victimization (e.g., Hit and Run)</label>
            </value>
            <value>
                <fullName>Robbery</fullName>
            </value>
            <value>
                <fullName>Stalking/Harassment</fullName>
            </value>
            <value>
                <fullName>Survivors of Homicide Victims</fullName>
            </value>
            <value>
                <fullName>Teen Dating Victimization</fullName>
            </value>
            <value>
                <fullName>Terrorism (Domestic/International)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>