force-app/main/default/objects/Victims_Served_Report__c/fields/Types_of_Services_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Services_Additional_Info__c</fullName>
    <label>Types of Services - Additional Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>