force-app/main/default/objects/Victims_Served_Report__c/fields/Unmet_Requests_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Requests_Explanation__c</fullName>
    <label>Unmet Requests Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>