force-app/main/default/objects/Victims_Served_Report__c/fields/Veterans__c.field-meta.xml
<CustomField>
    <fullName>Veterans__c</fullName>
    <label>Veterans</label>
    <length>3</length>
    <type>Text</type>
</CustomField>