force-app/main/default/objects/Victims_Served_Report__c/fields/Victim_Compensation_Application__c.field-meta.xml
<CustomField>
    <fullName>Victim_Compensation_Application__c</fullName>
    <label>Victim Compensation Application</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>