force-app/main/default/objects/Victims_Served_Report__c/fields/Victims_with_Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Victims_with_Disabilities__c</fullName>
    <label>Victims with Disabilities</label>
    <length>3</length>
    <type>Text</type>
</CustomField>