force-app/main/default/objects/Victims_Served_Report__c/fields/Victims_with_Limited_English_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Victims_with_Limited_English_Proficiency__c</fullName>
    <label>Victims with Limited English Proficiency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>