force-app/main/default/objects/Victims_Served_Report__c/fields/White_Non_Latino_Caucasian__c.field-meta.xml
<CustomField>
    <fullName>White_Non_Latino_Caucasian__c</fullName>
    <label>White Non-Latino/Caucasian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>